--- a/RecipeApp/Views/CollectionViews/DetailCollectionView/DetailViewCell.xib
+++ b/RecipeApp/Views/CollectionViews/DetailCollectionView/DetailViewCell.xib
@@ -1,21 +1,78 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DetailViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DetailViewCell" customModule="RecipeApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="144" height="188"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="144" height="188"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1hg-Wi-jz7">
+                        <rect key="frame" x="0.0" y="0.0" width="144" height="188"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Klz-1B-07o">
+                                <rect key="frame" x="20" y="20" width="104" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Klz-1B-07o" secondAttribute="height" multiplier="26:21" id="dKt-Di-lKh"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yvl-3Z-Lj2">
+                                <rect key="frame" x="10" y="124" width="124" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mde-ca-VjO">
+                                <rect key="frame" x="10" y="150" width="124" height="18"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Klz-1B-07o" firstAttribute="leading" secondItem="1hg-Wi-jz7" secondAttribute="leading" constant="20" id="1Y1-rU-bnV"/>
+                            <constraint firstItem="yvl-3Z-Lj2" firstAttribute="leading" secondItem="1hg-Wi-jz7" secondAttribute="leading" constant="10" id="68c-b3-vEz"/>
+                            <constraint firstItem="yvl-3Z-Lj2" firstAttribute="top" secondItem="Klz-1B-07o" secondAttribute="bottom" constant="20" id="F6B-1c-j12"/>
+                            <constraint firstAttribute="trailing" secondItem="yvl-3Z-Lj2" secondAttribute="trailing" constant="10" id="Ggq-zS-ViU"/>
+                            <constraint firstItem="Klz-1B-07o" firstAttribute="top" secondItem="1hg-Wi-jz7" secondAttribute="top" constant="20" id="cnc-C5-Tbd"/>
+                            <constraint firstAttribute="trailing" secondItem="mde-ca-VjO" secondAttribute="trailing" constant="10" id="gE3-S3-5kI"/>
+                            <constraint firstItem="mde-ca-VjO" firstAttribute="top" secondItem="yvl-3Z-Lj2" secondAttribute="bottom" constant="5" id="gul-eu-onc"/>
+                            <constraint firstItem="mde-ca-VjO" firstAttribute="leading" secondItem="1hg-Wi-jz7" secondAttribute="leading" constant="10" id="yON-rx-GRi"/>
+                            <constraint firstAttribute="trailing" secondItem="Klz-1B-07o" secondAttribute="trailing" constant="20" id="zIm-j5-hJI"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="1hg-Wi-jz7" secondAttribute="bottom" id="H2k-sE-bvk"/>
+                <constraint firstItem="1hg-Wi-jz7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Kdl-MJ-aJm"/>
+                <constraint firstItem="1hg-Wi-jz7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="SIH-Oz-0J3"/>
+                <constraint firstAttribute="trailing" secondItem="1hg-Wi-jz7" secondAttribute="trailing" id="UWB-Dx-ykn"/>
+            </constraints>
+            <size key="customSize" width="144" height="188"/>
+            <connections>
+                <outlet property="imageView" destination="Klz-1B-07o" id="Y34-qI-K16"/>
+                <outlet property="subtitle" destination="mde-ca-VjO" id="e2J-bI-icT"/>
+                <outlet property="title" destination="yvl-3Z-Lj2" id="lGb-s8-DUW"/>
+            </connections>
+            <point key="canvasLocation" x="166.41221374045801" y="68.309859154929583"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
