--- a/RecipeApp/Views/CollectionViews/HeaderCell/HeaderCell.xib
+++ b/RecipeApp/Views/CollectionViews/HeaderCell/HeaderCell.xib
@@ -33,6 +33,9 @@
                 <constraint firstItem="niI-VE-xBI" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="w4q-vQ-YAC"/>
             </constraints>
             <size key="customSize" width="274" height="50"/>
+            <connections>
+                <outlet property="headerText" destination="niI-VE-xBI" id="N8p-wl-uUW"/>
+            </connections>
             <point key="canvasLocation" x="265.64885496183206" y="19.718309859154932"/>
         </collectionViewCell>
     </objects>
