--- a/RecipeApp/Views/ViewControllers/DetailViewController.xib
+++ b/RecipeApp/Views/ViewControllers/DetailViewController.xib
@@ -20,19 +20,28 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="inJ-a8-Bmg">
-                    <rect key="frame" x="0.0" y="59" width="393" height="366"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemGray4Color"/>
-                </view>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EQc-ky-869">
-                    <rect key="frame" x="0.0" y="433" width="393" height="385"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemGray6Color"/>
-                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fOX-7z-4Ju">
+                    <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="inJ-a8-Bmg">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="375.66666666666669"/>
+                            <color key="backgroundColor" systemColor="systemGray4Color"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EQc-ky-869">
+                            <rect key="frame" x="0.0" y="383.66666666666674" width="393" height="375.33333333333326"/>
+                            <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        </view>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="fOX-7z-4Ju" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="5WK-ON-z1n"/>
+                <constraint firstItem="fOX-7z-4Ju" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="9R3-4Y-mLN"/>
+                <constraint firstItem="fOX-7z-4Ju" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="XO1-En-WHt"/>
+                <constraint firstItem="fOX-7z-4Ju" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="cHt-QC-LLr"/>
+            </constraints>
             <point key="canvasLocation" x="-16.030534351145036" y="19.718309859154932"/>
         </view>
     </objects>
