--- a/RecipeApp/Views/Nibs/Views/SegmentControlView.xib
+++ b/RecipeApp/Views/Nibs/Views/SegmentControlView.xib
@@ -20,6 +20,9 @@
                         <segment title="First"/>
                         <segment title="Second"/>
                     </segments>
+                    <connections>
+                        <action selector="SegmentControlPressed:" destination="iN0-l3-epB" eventType="valueChanged" id="ZUd-Rb-9bf"/>
+                    </connections>
                 </segmentedControl>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4Pb-jY-KHc">
                     <rect key="frame" x="0.0" y="68" width="393" height="307"/>
