--- a/RecipeApp/Views/Nibs/Views/FavouritesDetailView.xib
+++ b/RecipeApp/Views/Nibs/Views/FavouritesDetailView.xib
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FavouritesDetailView" customModule="RecipeApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="445"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="352"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vzE-70-3vP">
@@ -20,41 +20,53 @@
                         <constraint firstAttribute="width" secondItem="vzE-70-3vP" secondAttribute="height" multiplier="131:88" id="xS1-Vt-Qku"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8m-vI-EsN">
-                    <rect key="frame" x="16" y="296" width="301" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8m-vI-EsN">
+                    <rect key="frame" x="16" y="296" width="301" height="20.333333333333314"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V1j-46-4VX">
-                    <rect key="frame" x="325" y="296" width="58" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V1j-46-4VX">
+                    <rect key="frame" x="341.66666666666669" y="296" width="41.333333333333314" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QfJ-iR-Tkd">
+                    <rect key="frame" x="326" y="16" width="51" height="35"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="heart.fill" catalog="system"/>
+                    <connections>
+                        <action selector="favouriteButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="tZE-9D-Qik"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="t8m-vI-EsN" firstAttribute="top" secondItem="vzE-70-3vP" secondAttribute="bottom" constant="32" id="01D-xF-nbz"/>
-                <constraint firstItem="vzE-70-3vP" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="0dQ-CJ-tin"/>
                 <constraint firstItem="V1j-46-4VX" firstAttribute="top" secondItem="vzE-70-3vP" secondAttribute="bottom" constant="32" id="3IU-3I-foa"/>
-                <constraint firstItem="vzE-70-3vP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="7rN-q6-QVc"/>
+                <constraint firstItem="QfJ-iR-Tkd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="AY0-U6-Tq9"/>
                 <constraint firstItem="vzE-70-3vP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GJ7-9D-NpA"/>
+                <constraint firstAttribute="trailing" secondItem="QfJ-iR-Tkd" secondAttribute="trailing" constant="16" id="INI-r6-v9w"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="t8m-vI-EsN" secondAttribute="trailing" constant="76" id="TeC-r5-akV"/>
                 <constraint firstItem="t8m-vI-EsN" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="Yb4-7c-3nh"/>
+                <constraint firstAttribute="trailing" secondItem="vzE-70-3vP" secondAttribute="trailing" id="ccM-7j-Q6X"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="V1j-46-4VX" secondAttribute="trailing" constant="10" id="fmD-iH-sX8"/>
+                <constraint firstItem="vzE-70-3vP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="hFe-Jk-z8H"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="favouriteButton" destination="QfJ-iR-Tkd" id="dY5-J5-IMf"/>
                 <outlet property="imageView" destination="vzE-70-3vP" id="bUM-mt-nB9"/>
                 <outlet property="subTitleLabel" destination="V1j-46-4VX" id="Bce-Tt-15G"/>
                 <outlet property="titleLable" destination="t8m-vI-EsN" id="fdg-Y8-WVH"/>
             </connections>
-            <point key="canvasLocation" x="-16.030534351145036" y="-125.70422535211269"/>
+            <point key="canvasLocation" x="-16.030534351145036" y="-158.45070422535213"/>
         </view>
     </objects>
     <resources>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
