--- a/RecipeApp/Views/Nibs/Cells/FoodTableViewCell.xib
+++ b/RecipeApp/Views/Nibs/Cells/FoodTableViewCell.xib
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FKo-om-qnE">
-                        <rect key="frame" x="10" y="10" width="300" height="72"/>
+                        <rect key="frame" x="10" y="0.0" width="300" height="72"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HbA-zV-66n">
                                 <rect key="frame" x="10" y="10" width="50" height="52"/>
@@ -78,9 +78,9 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="FKo-om-qnE" secondAttribute="bottom" constant="10" id="3HZ-Bu-3aT"/>
+                    <constraint firstAttribute="bottom" secondItem="FKo-om-qnE" secondAttribute="bottom" id="3HZ-Bu-3aT"/>
                     <constraint firstAttribute="trailing" secondItem="FKo-om-qnE" secondAttribute="trailing" constant="10" id="fZA-gP-A43"/>
-                    <constraint firstItem="FKo-om-qnE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="pS4-g0-704"/>
+                    <constraint firstItem="FKo-om-qnE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pS4-g0-704"/>
                     <constraint firstItem="FKo-om-qnE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="zzU-hz-9Zm"/>
                 </constraints>
             </tableViewCellContentView>
